--- a/latex_conf_vgtc_080216/PKU-MC1-WANG.tex
+++ b/latex_conf_vgtc_080216/PKU-MC1-WANG.tex
@@ -121,7 +121,7 @@ In this poster, we will first introduce our design consideration of visual analy
 %eg.\cite{kitware2003,Max:1995:OMF}
 
 \section{Design Priciples}
-Data provided in MC1 mainly includes 845 news articles, 35 resumes, employee records, email headers and some other report on both POK and Kronos. These data have the following features: 1. 
+Data provided in MC1 mainly includes 845 news articles, 35 resumes, employee records, email headers and some other report on both POK and Kronos. These data have the following features: 1. Data from 
 
 
 \section{Visualization Tools}
